# clickhouse-actix

./: .env  Cargo.toml  Dockerfile
src/: main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/clickhouse/: insert.rs  mod.rs
src/config/: mod.rs
src/errors/: mod.rs
