[package]
name = "clickhouse-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse-rs = "1.0.0-alpha.1"
tokio = { version = "1.14.0", features = ["full"] }
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.2"
serde = "1"
serde_json = "1"
dotenv = "*"
config = "*"
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
